client/src/index.css
@font-face {
  font-family: "Inter", serif;
  src:
    url("./assets/fonts/Montserrat-ThinItalic.woff2") format("woff2"),
    url("./assets/fonts/Montserrat-ThinItalic.woff") format("woff");
  font-weight: 100;
  font-style: italic;
  font-display: swap;
}

@font-face {
  font-family: "Inter", serif;
  src:
    url("./assets/fonts/Montserrat-Thin.woff2") format("woff2"),
    url("./assets/fonts/Montserrat-Thin.woff") format("woff");
  font-weight: 100;
  font-style: normal;
  font-display: swap;
}
:root {
  --color-primary: rgb(15, 89, 193);
  --color-primary-variant: rgb(11, 175, 207);

  --color-gray-0: #fff;
  --color-gray-100: #eee;
  --color-gray-200: #ccc;
  --color-gray-300: #bbb;
  --color-gray-400: #999;
  --color-gray-500: #777;
  --color-gray-600: #555;
  --color-gray-700: #333;
  --color-gray-800: #111;
  --color-gray-900: #000;

  --color-danger: rgb(246, 67, 67);
  --color-success: rgb(6, 164, 101);

  --radius-1: 0.4rem;
  --radius-2: 0.8rem;
  --radius-3: 1.2rem;
  --radius-4: 1.6rem;
  --radius-5: 2rem;

  --container-w-lg: 80%;
  --container-w-sm: 94%;

  --transform: all 300ms ease;
}
* {
  margin: 0;
  padding: 0;
  list-style: none;
  text-decoration: none;
  border: 0;
  box-sizing: border-box;
}
.container {
  /* width: 100%;
  max-width: var(--container-w-lg);
  margin: 0 auto;
  padding: 0 1rem; */

  width: var(--container-w-lg);
  margin-inline: auto;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--color-gray-900);
  font-weight: 800;
  text-transform: uppercase;
  line-height: 1.1;
}
h1 {
  font-size: 1.6rem;
}
h2 {
  font-size: 1.3rem;
}
h3 {
  font-size: 1.1rem;
}
h4 {
  font-size: 0.9rem;
}
h5 {
  font-size: 0.75rem;
}
h6 {
  font-size: 0.6rem;
}
a {
  font-size: 0.8rem;
}
img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
}
button {
  cursor: pointer;
}
button:focus-visible {
  outline: 2px solid #1976d2;
  outline-offset: 2px;
}

.btn {
  width: fit-content;
  background: var(--color-gray-100);
  color: var(--color-gray-900);
  font-weight: 600;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: var(--radius-1);
  transition: var(--transform);
}

.btn.primary {
  background: var(--color-primary);
  color: var(--color-gray-0);
}
.btn.primary:hover {
  background: var(--color-gray-900);
  color: var(--color-gray-100);
}
.btn.danger {
  background: var(--color-danger);
  color: var(--color-gray-0);
}
.btn.danger:hover {
  background: var(--color-gray-900); /* A darker shade of the danger color */
  color: var(--color-gray-100); /* A lighter shade for the text color */
}
.btn.sm {
  padding: 0.5rem 1.2rem;
}
.btn.full {
  width: 100%;
}
.danger {
  color: var(--color-danger);
  font-weight: 600;
}
.primary {
  color: var(--color-primary);
}

.btn-container {
  display: flex;
}
.btn-left {
  justify-content: flex-start;
}

.btn-center {
  justify-content: center;
}

.btn-right {
  justify-content: flex-end;
}

.dark {
  --color-gray-0: #0e0d14;
  --color-gray-100: #2f2b42;
  --color-gray-200: #45405e;
  --color-gray-300: #7b7b7b;
  --color-gray-400: #919191;
  --color-gray-500: #a1a1a1;
  --color-gray-600: #c0c0c0;
  --color-gray-700: #e6e5e5;
  --color-gray-800: #fafafa;
  --color-gray-900: #fff;
}

body {
  font-family: "Montserrat", sans-serif;
  font-size: 0.9rem;
  background: var(--color-gray-100);
  color: var(--color-gray-700);
  line-height: 1.6;
}
.form__error-message {
  background: var(--color-danger);
  color: var(--color-gray-0);
  padding: 0.6rem 1.5rem;
  border-radius: var(--radius-1);
}

/* ---------- CLIENT ERROR MESSAGE ----------- */
.form__client-error-message {
  color: var(--color-danger);
}
.input-error {
  border: 1px solid var(--color-danger);
}

/* ---------- ERROR PAGE ----------- */
.errorPage {
  display: grid;
  place-items: center;
  height: 100vh;
  background: var(--color-gray-0);
}
.errorPage__container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.errorPage__container img {
  width: 80%;
}
.errorPage__container h1 {
  font-size: 4rem;
}

/* ---------- MODAL POPUP ----------- */
.modal {
  backdrop-filter: blur(5px);
  position: fixed;
  top: 0;
  left: 0;
  z-index: 2;
  height: 100vh;
  width: 100%;
  background: rgba(0, 0, 0, 0.7);
  display: grid;
  place-items: center;
}
.modal h4 {
  color: var(--color-gray-0);
}

.modal__header {
  background: var(--color-primary);
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 2rem;
}
.modal__header button {
  background: transparent;
  font-size: 1.8rem;
  color: var(--color-gray-0);
}
.modal__content {
  background: var(--color-gray-0);
  border-radius: var(--radius-5);
  overflow: hidden;
}
.modal__content form {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding: 2rem;
  padding-bottom: 3rem;
}
.modal__content form input,
textarea {
  margin-top: 0.6rem;
  width: 100%;
  padding: 0.8rem 1rem;
  background: var(--color-gray-100);
  color: var(--color-gray-900);
  border-radius: var(--radius-1);
}

/* ---------- CSS to hide label but keep for screen readers ---------- */
.visually-hidden {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

/* ---------- MEDIA QUERIES (Mobile) ---------- */
@media screen and (max-width: 600px) {
  .container {
    width: var(--container-w-sm);
  }

  .errorPage__container {
    padding: 0 2rem;
  }

  .modal__content {
    width: 95%;
  }
}

